# rust-cuda-kernel-rl

./: .gitignore  Cargo.toml  Makefile  README.md  ~
config/: application-config-gpt.json  application-config.json
kernelbench-cuda/: CMakeLists.txt
kernelbench-cuda/data/: optimization_database.json  optimization_database_footer-old.md  optimization_database_footer.md  optimization_database_header.md
kernelbench-cuda/level1/001_Square_matrix_multiplication/: driver.cpp
kernelbench-cuda/level1/002_Standard_matrix_multiplication/: driver.cpp
kernelbench-cuda/level1/003_Batched_matrix_multiplication/: driver.cpp
kernelbench-cuda/level1/004_Matrix_vector_multiplication/: driver.cpp
kernelbench-cuda/level1/005_Matrix_scalar_multiplication/: driver.cpp
kernelbench-cuda/level1/007_Matmul_with_small_K_dimension/: driver.cpp
kernelbench-cuda/level1/008_Matmul_with_irregular_shapes/: driver.cpp
kernelbench-cuda/level1/009_Tall_skinny_matrix_multiplication/: driver.cpp
kernelbench-cuda/level1/010_3D_tensor_matrix_multiplication/: driver.cpp
kernelbench-cuda/level1/011_4D_tensor_matrix_multiplication/: driver.cpp
src/: main.rs
src/cli/: schema.rs
src/config/: load.rs
src/inference/: llm.rs  prompts.rs
src/kernel/: compile.rs  execute.rs  mod.rs  profile.rs
src/routers/: compiler.rs  gpu.rs  llm.rs  mod.rs
src/utils/: common.rs  mod.rs  shell.rs
src/workflow/: api_client.rs  controller.rs  mod.rs
tests/: memory_compute_overlap.cu  tensor_core_utilization.cu
tests/prompts/: curl-test.txt  optimization-plan.prompt
(+174 files in other folders)
